fix: delete  page-main-wrap class

--- a/ui/src/common/sideNavLayout.scss
+++ b/ui/src/common/sideNavLayout.scss
@@ -35,9 +35,7 @@
     padding-left: 12px;
     padding-right: 12px;
   }
-  .page-main-wrap {
-    max-width: 100%;
-  }
+
   .page-main {
     max-width: 100%;
   }
